--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,25 +1,58 @@
 [package]
 name = "barq"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
+description = "Lightning-fast PostgreSQL-compatible database engine"
+license = "MIT"
 
 [dependencies]
+# PostgreSQL wire protocol
+pgwire = "0.25"
+
 # Async runtime
-tokio = { version = "1.0", features = ["rt-multi-thread", "net", "io-util", "macros", "sync"] }
+tokio = { version = "1.0", features = ["rt-multi-thread", "net", "io-util", "macros", "sync", "fs", "time"] }
 
 # Columnar data format for SIMD-friendly scans
 arrow = "53.0"
+arrow-array = "53.0"
+arrow-schema = "53.0"
+arrow-cast = "53.0"
+arrow-ord = "53.0"
+arrow-select = "53.0"
 
-# SQL parsing (AST generation only)
-sqlparser = "0.43"
+# SQL parsing
+sqlparser = "0.51"
 
-# Table formatting for REPL output
-prettytable-rs = "0.10"
-
-# Error handling without panic
+# Error handling
 thiserror = "1.0"
+anyhow = "1.0"
+
+# Serialization for persistence
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+bincode = "1.3"
+
+# Async traits
+async-trait = "0.1"
+
+# Logging
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+
+# Utils
+bytes = "1.0"
+parking_lot = "0.12"
+dashmap = "6.0"
+uuid = { version = "1.0", features = ["v4"] }
+chrono = { version = "0.4", features = ["serde"] }
+md-5 = "0.10"
+rand = "0.8"
+futures = "0.3"
 
 [profile.release]
 opt-level = 3
 lto = "thin"
 codegen-units = 1
+
+[profile.dev]
+opt-level = 1
